--- a/style.css
+++ b/style.css
@@ -5,6 +5,29 @@
     font-family: 'Poppins', sans-serif;
 }
 
+@font-face {
+    font-family: 'Poppins', sans-serif;
+    src: url(https://fonts.googleapis.com/css2?family=Poppins:wght@800;900&display=swaps);
+}
+
+.background-effect{
+    background-image: url(./images/background-effect.svg);
+    background-repeat: no-repeat;
+    height: auto;
+    width: 100%;
+    background-position: center center;
+    background-size: cover;
+}
+
+.background-block{
+    background: url(./images/background.png);
+    background-repeat: no-repeat;
+    height: auto;
+    width: 100%;
+    background-position: center center;
+    background-size: cover;
+}
+
 button {
     background-color: whitesmoke; 
     border: none;
@@ -19,72 +42,81 @@ button {
     color: darkblue;
   }
 
-.fixed-button {
-    position: fixed;
-    top: 30px;
-    right: 30px;
-    
+header {
+    display: flex;
+    justify-content: flex-end;
 }
 
-@font-face {
-    font-family: 'Poppins', sans-serif;
-    src: url(https://fonts.googleapis.com/css2?family=Poppins:wght@800;900&display=swaps);
- }
+div.fixed-button {
+    padding: 20px 30px;
+}
+
+h1 h2 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 60px;
+}
 
 .main {
-    background: url(./images/background.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    height: auto;
-    width: 100%;
-    padding: 50px;
+    padding: 50px 15px;
     color: white;
-    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
 }
-
-
 
 h3 {
     text-align: center;
     padding: 30px;
     color: darkblue;
-    font-size: 36px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 45px;
 }
 
-ul {
-list-style-type: none;
-text-align: center;
-display: flex;
-flex-direction: column;
-flex-flow: column wrap;
-padding: 30px;
-justify-content: space-between;
-color: gray;
-font-size: 18px;
+ul{
+    list-style-type: none;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    flex-flow: column wrap;
+    padding: 30px;
+    justify-content: space-between;
+    color: gray;
+    font-size: 18px;
 }
 
 li{
-    padding: 20px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    width: 100%;
     } 
 
 .number {
-font-size: 36px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 50px;
+    line-height: 75px;
 }
 
 
 @media only screen and (min-width: 480px) {
     .main{
-     padding-top: 15%;
+     padding-top: 10%;
      padding-left: 10%;
      font-size: 1.2em;
     }
     
     ul {
         flex-direction: row;
-        padding: 10px 10%;
     }
     li{
-        padding: 10px 50px;
+        width: 30%;
         } 
   }
 
@@ -93,13 +125,15 @@ font-size: 36px;
         flex-direction: row;
     }
     li{
-        padding: 10px 30px;
-        } 
+        width: 15%;
+        }   
+    div.block-info{
+        padding: 20px 70px;
+    }
   }
-
   
 @media screen and (max-width: 1024px) {
     div.fixed-button {
       display: none;
-      
     }
+}
